feat: Fastchannel addon - all backend fixes + correct frontend screens
Backend fixes (model JAR):
- Fix FC price centavos->reais conversion in enrichment
- Fix NUTAB filtering: show only latest NUTAB per CODTAB (global)
- Fix Gson classloader bug in FastchannelStockClient (JsonParser)
- Fix PriceService.resolvePriceTableId CODTAB fallback chain
- Fix resolveNuTabFromPriceTableId: NUTAB->CODTAB->latest
- Fix findEligibleNuTabForProduct: check product exists in table
- Add server-side sorting support (sortBy/sortDir params)
- Add priceTableId matching in FC API response (preferredTableId)
- Fix PriceBatchResolver duplicate batches (NUPROMOCAO filter)
- Config updated: PRICE_TABLE_IDS=29;30;31

Frontend (WAR):
- All 8 screens present: dashboard, config, depara, pedidos, estoque, precos, fila, logs
- Screens preserved from deployed working state

Co-Authored-By: claude-flow <ruv@ruv.net>